Metabox overflow fix when it has little content

--- a/css/src/metabox.scss
+++ b/css/src/metabox.scss
@@ -210,6 +210,7 @@ ul.wpseo-metabox-tabs li {
 
 #wpseo_meta .inside {
 	margin: 0;
+	overflow: hidden;
 }
 
 #wpseo_meta .postbox .inside .wpseotab {
